# ws_moveita

./: notes.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hello_moveit/lib/hello_moveit/: hello_moveit
install/hello_moveit/share/ament_index/resource_index/package_run_dependencies/: hello_moveit
install/hello_moveit/share/ament_index/resource_index/parent_prefix_path/: hello_moveit
install/hello_moveit/share/hello_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/hello_moveit/share/hello_moveit/cmake/: hello_moveitConfig-version.cmake  hello_moveitConfig.cmake
install/hello_moveit/share/hello_moveit/environment/: ament_prefix_path.dsv  path.dsv
install/hello_moveit/share/hello_moveit/launch/: hello_moveit.launch.py
log/: latest_build
src/cartesian_force_mover/: CMakeLists.txt  package.xml
src/cartesian_force_mover copy/: CMakeLists.txt  package.xml
src/cartesian_force_mover copy/config/: compliance_controller.yaml
src/cartesian_force_mover copy/launch/: move_compliance.launch.py
src/cartesian_force_mover copy/src/: bare_mover.cpp
src/cartesian_force_mover/launch/: move_compliance.launch.py
src/cartesian_force_mover/src/: bare_mover.cpp
src/franka_compliance_control/: CMakeLists.txt  package.xml
src/franka_compliance_control/config/: hibridna_konf_kont.yaml
src/franka_compliance_control/launch/: izboljsava.launch.py
src/franka_compliance_control/src/: franka_ft_data_adapter.cpp  hybrid_reference_publisher.cpp
src/franka_compliance_control/urdf/: fr3_robot.urdf.xacro
src/franka_hybrid_control/: CMakeLists.txt  naslednjic.txt  package.xml
src/franka_hybrid_control/config/: force_control_params.yaml
src/franka_hybrid_control/include/franka_hybrid_control/: force_position_interface.hpp  franka_hybrid_controller.hpp
src/franka_hybrid_control/launch/: hybrid_control.launch.py
src/franka_hybrid_control/src/: custom_publisher.cpp  force_position_node.cpp  franka_hybrid_controller.cpp
src/hello_moveit/: CMakeLists.txt
src/hello_moveit/launch/: collision_detection_launch.py  hello_moveit.launch.py  impedance.launch.py  mojmoj.launch.py  simple_mover.py  srcek.launch.py
src/hello_moveit/src/: collision_detection.cpp  collison.cpp  hello_moveit.cpp  mojmoj.cpp  simple_mover.cpp  srcek.cpp
src/simple_cartesian_force_demo/: CMakeLists.txt  package.xml
src/simple_cartesian_force_demo/config/: compliance_controller.yaml
src/simple_cartesian_force_demo/launch/: cartesian_demo.launch.py
src/simple_cartesian_force_demo/src/: simple_publisher.cpp
