<?xml version="1.0"?>
<package format="3">
  <name>simple_cartesian_force_demo</name>
  <version>0.1.0</version>
  <description>Simple Cartesian compliance demo</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
