<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello_moveit</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="luka.lukec92@gmail.com">lampa66</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Launch-related -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Required for using xacro in Command() -->
  <exec_depend>xacro</exec_depend>

  <!-- If you're using parameter YAMLs or robot model generation -->
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>moveit_visual_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <launch>
      launch/
    </launch>
  </export>
</package>
